package codepilotunittest.annotations;

import java.lang.annotation.ElementType;
import java.lang.annotation.Retention;
import java.lang.annotation.RetentionPolicy;
import java.lang.annotation.Target;

@Retention(RetentionPolicy.RUNTIME)
@Target(ElementType.METHOD)
public @interface TestConfig {
    Class<? extends Throwable> expectedException() default TestConfig.None.class;
    boolean happy() default true;

    class None extends Throwable {}
}
